# IndianStockGenius

./: README.md  app.py  chart_patterns.py  data_fetcher.py  fundamental_analysis.py  model_validation.py  price_prediction.py  pyproject.toml  report_generator.py  sentiment_analysis.py  technical_analysis.py  utils.py
