[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "matplotlib>=3.10.1",
    "nltk>=3.9.1",
    "nsepy>=0.8",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "python-dateutil>=2.9.0.post0",
    "requests>=2.32.3",
    "scikit-learn>=1.6.1",
    "streamlit>=1.44.0",
    "yfinance>=0.2.55",
]
